syntax = "proto3";
option java_multiple_files=true;
option java_package = "io.quarkus.custom.proto";
option java_outer_classname = "HelloWorld";

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply){}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}